Need to restructure function direction

-Perhaps click button will load into array, then pass that into a menu function
-Data.txt has actual information
-Displays number of appliances loaded upon file load
-Changed appliance c_tor to add actual values instead of dummy ones
-A lot of work to do 


Now reads actual data

-Read into appliance class
-Added applianceToString method, converts appliance into a concatenated string 
containing all the private members of that appliance
-Resized button and output window

File I/O worked out

-added a file input output operation
-added a comment mechanism using '*'
-button resizing