@@ -1,10 +1,11 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Appliance Tracker" Height="350" Width="525">
+        Title="Appliance Tracker 1.0 by Steven An" Height="350" Width="525">
     <Grid>
-        <TextBox Name ="ResultBlock" HorizontalAlignment="Left" Height="217" Margin="28,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" />
-        <Button Content="Load File!" HorizontalAlignment="Left" Width="156" Margin="320,0,0,111" Click ="Load_File_Button_Click"  Height="128" VerticalAlignment="Bottom"/>
+        <TextBox Name ="ResultBlock" HorizontalAlignment="Left" Height="243" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="497" />
+        <Button Content="Load File!" HorizontalAlignment="Left" Width="71" Margin="10,0,0,10" Click ="Load_File_Button_Click"  Height="40" VerticalAlignment="Bottom"/>
+        <Button Content="View Appliances" HorizontalAlignment="Left" Width="105" Margin="97,0,0,10" Click ="displayAllAppliances"  Height="40" VerticalAlignment="Bottom"/>
 
 
     </Grid>
