@@ -1,7 +1,3 @@
-*Name
-*Hours
-*Minutes
-*kwH
 Keurig Coffee Machine
 49
 11 
