@@ -1,4 +1,4 @@
-﻿#pragma checksum "..\..\MainWindow.xaml" "{406ea660-64cf-4c82-b6f0-42d48172a799}" "D15C92EB0D3B1B62B143F301EBEC0BD4"
+﻿#pragma checksum "..\..\MainWindow.xaml" "{406ea660-64cf-4c82-b6f0-42d48172a799}" "D90150D6E6C20B4AB7B05D31E9B83709"
 //------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
@@ -84,6 +84,14 @@ namespace WpfApplication1 {
             
             #line 7 "..\..\MainWindow.xaml"
             ((System.Windows.Controls.Button)(target)).Click += new System.Windows.RoutedEventHandler(this.Load_File_Button_Click);
+            
+            #line default
+            #line hidden
+            return;
+            case 3:
+            
+            #line 8 "..\..\MainWindow.xaml"
+            ((System.Windows.Controls.Button)(target)).Click += new System.Windows.RoutedEventHandler(this.displayAllAppliances);
             
             #line default
             #line hidden
